--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>西绪福斯</title>
+    <style type="text/css">
+		* {padding:0;margin:0;}
+		.header {width:1000px;height:80px;line-height:80px;text-align:center;margin:0 auto;background:#a7dcf0;}
+		.mainer {width:1000px;height:auto;overflow:hidden;margin:10px auto;}
+		.sidebar {width:150px;height:800px;line-height:800px;text-align:center;background:#bbee80;float:left;margin-right:10px;}
+		.center {width:580px;height:800px;line-height:800px;text-align:center;background:#bcf1d5;float:left;}
+		.sosoer {width:250px;height:800px;background:#eaebbd;float:right;}
+		.sosoer .ss {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto 0;background:#f77c79;}
+		.sosoer .wt {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto;background:#f77c79;}
+		.sosoer .info {width:230px;height:260px;line-height:260px;color:#fff;text-align:center;margin:0 auto;background:#000;}
+		.footer {width:1000px;height:80px;line-height:80px;text-align:center;background:#a7dcf0;margin:0 auto;}
+	</style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
     
 </head>
 <body>
-我想让全世界看到我的网页
 
+<div class="header">头部版块</div>
+	
+	<div class="mainer">
+		<div class="sidebar">导航</div>
+		
+		<div class="center">主要内容区</div>
+		
+		<div class="sosoer">
+			<div class="ss">搜索栏</div>
+			<div class="wt">提问</div>
+			<div class="info">功能以及辅助信息</div>
+		</div>
+	</div>
 <!--COPYRIGHT-->
 <div id="copyright">&copy; 2023 - Designed and developed by Lin. </div>
 
