--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -6,14 +5,14 @@
     <title>西绪福斯</title>
     <style type="text/css">
 		* {padding:0;margin:0;}
-		.header {width:1000px;height:80px;line-height:80px;text-align:center;margin:0 auto;background:#a7dcf0;}
+		.header {width:1000px;height:80px;line-height:80px;text-align:center;margin:0 auto;background:#a7cff0;}
 		.mainer {width:1000px;height:auto;overflow:hidden;margin:10px auto;}
-		.sidebar {width:150px;height:800px;line-height:800px;text-align:center;background:#bbee80;float:left;margin-right:10px;}
+		.sidebar {width:150px;height:800px;line-height:800px;text-align:center;background:#b7ee80;float:left;margin-right:10px;}
 		.center {width:580px;height:800px;line-height:800px;text-align:center;background:#bcf1d5;float:left;}
 		.sosoer {width:250px;height:800px;background:#eaebbd;float:right;}
-		.sosoer .ss {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto 0;background:#f77c79;}
+		.sosoer .ss {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto 0;background:#f79f79ef;}
 		.sosoer .wt {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto;background:#f77c79;}
-		.sosoer .info {width:230px;height:260px;line-height:260px;color:#fff;text-align:center;margin:0 auto;background:#000;}
+		.sosoer .info {width:230px;height:260px;line-height:260px;color:#fff;text-align:center;margin:0 auto;background:#000000000e9;}
 		.footer {width:1000px;height:80px;line-height:80px;text-align:center;background:#a7dcf0;margin:0 auto;}
 	</style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -32,8 +31,8 @@
 		
 		<div class="sosoer">
 			<div class="ss">搜索栏</div>
-			<div class="wt">提问</div>
-			<div class="info">功能以及辅助信息</div>
+			<div class="wt">帮助等</div>
+			<div class="info">其他辅助信息功能</div>
 		</div>
 	</div>
 <!--COPYRIGHT-->
@@ -48,6 +47,18 @@
 
 
 </body>
+
+
+
+
+
+
+
+
+
+
+</html>
+
 
 
 
