--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>西绪福斯</title>
     <style type="text/css">
 		* {padding:0;margin:0;}
-		.header {width:1000px;height:80px;line-height:80px;text-align:center;margin:0 auto;background:#a7cff0;}
+		.header {width:1000px;height:80px;line-height:80px;text-align:center;margin:0 auto;background:rgb(208, 167, 240);}
 		.mainer {width:1000px;height:auto;overflow:hidden;margin:10px auto;}
 		.sidebar {width:150px;height:800px;line-height:800px;text-align:center;background:#b7ee80;float:left;margin-right:10px;}
 		.center {width:580px;height:800px;line-height:800px;text-align:center;background:#bcf1d5;float:left;}
-		.sosoer {width:250px;height:800px;background:#eaebbd;float:right;}
-		.sosoer .ss {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto 0;background:#f79f79ef;}
-		.sosoer .wt {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto;background:#f77c79;}
+		.sosoer {width:250px;height:800px;background:#bdc9eb;float:right;}
+		.sosoer .ss {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto 0;background:#79eff7ef;}
+		.sosoer .wt {width:230px;height:250px;text-align:center;line-height:250px;margin:10px auto;background:#79c9f7;}
 		.sosoer .info {width:230px;height:260px;line-height:260px;color:#fff;text-align:center;margin:0 auto;background:#000000000e9;}
 		.footer {width:1000px;height:80px;line-height:80px;text-align:center;background:#a7dcf0;margin:0 auto;}
 	</style>
@@ -22,17 +22,17 @@
 </head>
 <body>
 
-<div class="header">头部版块</div>
+<div class="header">标题板块</div>
 	
 	<div class="mainer">
-		<div class="sidebar">导航</div>
+		<div class="sidebar">导航板块</div>
 		
-		<div class="center">主要内容区</div>
+		<div class="center">中心板块（主要内容展示）</div>
 		
 		<div class="sosoer">
 			<div class="ss">搜索栏</div>
-			<div class="wt">帮助等</div>
-			<div class="info">其他辅助信息功能</div>
+			<div class="wt">机动区块</div>
+			<div class="info">辅助功能和信息等</div>
 		</div>
 	</div>
 <!--COPYRIGHT-->
@@ -47,18 +47,6 @@
 
 
 </body>
-
-
-
-
-
-
-
-
-
-
-</html>
-
 
 
 
